// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Writing tsConfig and yaml files should update static location in application yaml files corectly when spring is undefined 1`] = `
{
  "": {
    "contents": "spring:
  web.resources.static-locations: file:./capCustomPathsApp
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/tsconfig.json": {
    "contents": "{
  "compilerOptions": {
    "typeRoots": [
      "./node_modules/@types",
      "../../node_modules/@types"
    ]
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Writing tsConfig and yaml files should update tsConfig files correctly 1`] = `
{
  "../../tsconfig.json": {
    "contents": "{
  "compilerOptions": {
    "typeRoots": [
      "./node_modules/@types",
      "../../node_modules/@types"
    ]
  }
}
",
    "state": "modified",
  },
}
`;
